# renarich

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: auto_gen.yml  build_linux_gcc.yml  build_macos_clang.yml  build_windows_mingw.yml  build_windows_msvc.yml  sync_external_files.yml
cmake/: icu4c_dep.cmake
example/: CMakeLists.txt  basic_usage.cpp  panel_usage.cpp  rprintf_usage.cpp  rstring_usage.cpp  wpanel_usage.cpp  wrprintf_usage.cpp
include/rena/: renarich.h  renarich_errcodes.h  renarich_exceptions.h  renarichxx.h
src/: CMakeLists.txt  basic_rcc.cpp  panel.cpp  renarichxx_cfg.cpp  rprintf.cpp  rstring.cpp
src/builtin/: box_chars.cpp  box_chars.h  color_tag.cpp  color_tag.h  console_helper.cpp  console_helper.h  nwrprintf.cpp  nwrprintf.h  nwstrcvt.cpp  nwstrcvt.h  terminal_helper.cpp  terminal_helper.h  tokenize.cpp  tokenize.h  ucwidth.cpp  ucwidth.h  wcwidth.cpp  wcwidth.h
src/tools/: update_box_chars.py
src/tools/data/: update_box_chars.cfg
src/tools/templates/update_box_chars/: box_chars.cpp.in  box_chars.h.in
